@@ -21,6 +21,9 @@
 # $Id$
 #
 # $Log$
+# Revision 1.12  2004/06/24 23:09:53  jalet
+# Fix for number of copies in PCL5 parser
+#
 # Revision 1.11  2004/06/23 22:07:50  jalet
 # Fixed PCL5 parser according to the sources of rastertohp
 #
@@ -169,9 +172,9 @@ class PCLAnalyzer :
                    }  
         self.data = []             
         self.pos = self.len = 0
-        copies = 1
         pagecount = resets = 0
         tag = None
+        copies = {}
         while 1 :
             char = self.readone()
             if not char :       # EOF ?
@@ -191,7 +194,7 @@ class PCLAnalyzer :
                 #     <ESC>)s###W -> Start of a fonts description block
                 #     <ESC>(f###W -> Start of a symbol set block
                 #     <ESC>&b###W -> Start of configuration data block
-                #     <ESC>&l###X -> Number of copies
+                #     <ESC>&l###X -> Number of copies for current page
                 #     <ESC>&n###W -> Starts an alphanumeric string ID block
                 #     <ESC>&p###X -> Start of a non printable characters block
                 #     <ESC>&a2G -> Back side when duplex mode as generated by rastertohp
@@ -216,8 +219,8 @@ class PCLAnalyzer :
                             break
                         size = (size * 10) + int(char)    
                     if char in tagend :    
-                        if (tag == "&l") and (char == "X") :
-                            copies = size
+                        if (tag == "&l") and (char == "X") : # copies for current page
+                            copies[pagecount] = size
                         elif (tag == "&l") and (char == "H") and (size == 0) :    
                             pagecount += 1      # Eject if NumPlanes > 1
                         elif (tag == "&a") and (size == 2) :
@@ -241,7 +244,17 @@ class PCLAnalyzer :
         # 1 more, we finally substract 3, and will test several
         # PCL files with this. If resets < 2, then the file is
         # probably not a valid PCL file, so we return 0
-        return copies * (pagecount or ((resets - 3) * (resets > 2)))
+        # TODO : this code is probably not needed anymore
+        # TODO : since we added more page ejections detections
+        pagecount = (pagecount or ((resets - 3) * (resets > 2)))
+        
+        # now handle number of copies for each page (may differ).
+        # in duplex mode, number of copies may be sent only once.
+        for pnum in range(pagecount) :
+            # if no number of copies defined, take the preceding one else 1.
+            nb = copies.get(pnum, copies.get(pnum-1, 1))
+            pagecount += (nb - 1)
+        return pagecount
         
 class PCLXLAnalyzer :
     def __init__(self, infile) :
